--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.35.0",
+    "@blocknote/mantine": "^0.35.0",
+    "@blocknote/react": "^0.35.0",
     "@clerk/clerk-react": "^5.38.1",
     "@edgestore/react": "^0.5.3",
     "@edgestore/server": "^0.5.3",
@@ -23,12 +26,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.25.4",
+    "emoji-picker-react": "^4.13.2",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-textarea-autosize": "^8.5.9",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
